Bug 865178 - Australis tabs OS X lightweight theme support. ui-r=shorlander, r=mconley
UltraBlame original commit: 39b1b4eee94b96c6fba98f547bc92c5452cf0957

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -170,14 +170,24 @@
   background-color: transparent;
   background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
                     @fgTabBackgroundMiddle@;
-  background-size: 100% 100%;
   background-repeat: repeat-x;
+  background-size: 100% 100%;
+}
+
+
+.tab-background-middle[selected=true]:-moz-lwtheme {
+  
+  background-size: 100% 100%, 100% 100%, auto auto;
+}
+
+.tab-background-start[selected=true]:-moz-lwtheme::before,
+.tab-background-end[selected=true]:-moz-lwtheme::before {
+  background-image: @fgTabTextureLWT@;
 }
 
 .tab-background-middle[selected=true]:-moz-lwtheme {
-  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png);
+  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle-lwtheme.png), @fgTabTextureLWT@;
 }
-
 
 .tab-background-start[selected=true]:-moz-lwtheme::before,
 .tab-background-end[selected=true]:-moz-lwtheme::before,
