--- a/browser/themes/osx/browser-lightweightTheme.css
+++ b/browser/themes/osx/browser-lightweightTheme.css
@@ -2,8 +2,7 @@
 
 
 
-%include linuxShared.inc
-%filter substitution
+%include shared.inc
 
 
 
@@ -22,7 +21,7 @@
 #tabbrowser-tabs:not([movingtab]) > .tabbrowser-tab > .tab-stack > .tab-background > .tab-background-middle[selected=true]:-moz-lwtheme {
   background-attachment: scroll, scroll, fixed;
   background-color: transparent;
-  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
+  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle-lwtheme.png),
                     @fgTabTextureLWT@;
 
   background-position: 0 0, 0 0, right top;
