--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -167,22 +167,16 @@
   }
 
   
-  #nav-bar[tabsontop=true],
-  #main-window[disablechrome] #navigator-toolbox[tabsontop=true]::after {
+  #nav-bar[tabsontop=true] {
     border-top: 1px solid @toolbarShadowColor@ !important;
     background-clip: padding-box;
-  }
-
-  #main-window[disablechrome] #navigator-toolbox[tabsontop=true]::after {
-    visibility: visible;
   }
 
   
 
   #main-window[sizemode=normal] #nav-bar[tabsontop=true],
   #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + toolbar,
-  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + #customToolbars + #PersonalToolbar,
-  #main-window[sizemode=normal][disablechrome] #navigator-toolbox[tabsontop=true]::after {
+  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + #customToolbars + #PersonalToolbar {
     border-top: 1px solid @toolbarShadowColor@;
     border-top-left-radius: 2.5px;
     border-top-right-radius: 2.5px;
@@ -211,14 +205,6 @@
   #main-window[sizemode=normal] #TabsToolbar[tabsontop=false] {
     padding-left: 2px;
     padding-right: 2px;
-  }
-
-  
-  #main-window[sizemode=normal][disablechrome] #navigator-toolbox[tabsontop=true]:not(:-moz-lwtheme)::after {
-    visibility: visible;
-    background-color: @customToolbarColor@;
-    background-image: linear-gradient(@toolbarHighlight@, @toolbarHighlight@);
-    height: 4px;
   }
 
   
