--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -99,6 +99,11 @@
 #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + toolbar,
 #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + #customToolbars + #PersonalToolbar {
   background-image: linear-gradient(@toolbarHighlight@, rgba(255,255,255,0));
+  box-shadow: 0 1px 0 @toolbarHighlight@ inset;
+  margin-top: -1px; 
+  
+  position: relative;
+  z-index: 1;
 }
 
 #personal-bookmarks {
