Bug 872446 - Remove our uses of :not([customizing]) for toolbars and customization mode. r=dao
UltraBlame original commit: 2675c59092b57c8023878efd9015aeed0eb2fa63

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -175,8 +175,8 @@
   
 
   #main-window[sizemode=normal] #nav-bar[tabsontop=true],
-  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + toolbar,
-  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true]:not([customizing]) + #customToolbars + #PersonalToolbar {
+  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true] + toolbar,
+  #main-window[sizemode=normal] #nav-bar[tabsontop=true][collapsed=true] + #customToolbars + #PersonalToolbar {
     border-top: 1px solid @toolbarShadowColor@;
     border-top-left-radius: 2.5px;
     border-top-right-radius: 2.5px;
