Bug 874448 - OS X customization mode doesn't have dragover border indicators on toolbarpaletteitems, r=dao
UltraBlame original commit: daf6a442745394c197e0ec20b07c275432dfa1d4

--- a/toolkit/themes/osx/global/toolbar.css
+++ b/toolkit/themes/osx/global/toolbar.css
@@ -41,7 +41,7 @@ toolbarseparator {
 
 
 toolbarpaletteitem {
-  cursor: grab;
+  cursor: -moz-grab;
 }
 
 toolbar[iconsize="small"] toolbarpaletteitem[type="spacer"] {
