Bug 853415 - Shuffle before/after around and set an ordinal value on :after to avoid overflow bug, r=MattN
UltraBlame original commit: 75392ec4426d54f719f9c37af56ff2f25a5d2b6c

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2243,6 +2243,12 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 #TabsToolbar::after {
   content: '';
+  
+
+
+
+
+  -moz-box-ordinal-group: 1001;
   position: absolute;
   bottom: 1px;
   left: 0;
