Bug 879147 - Don't move OS X titlebar placeholders in RTL mode. r=dao,mconley
UltraBlame original commit: 57a5d367cf74bf4bc3508b40e85ee8708e0b6863

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -48,6 +48,16 @@
   display: none;
 }
 
+
+.titlebar-placeholder[type="fullscreen-button"]:-moz-locale-dir(ltr),
+.titlebar-placeholder[type="caption-buttons"]:-moz-locale-dir(rtl) {
+  -moz-box-ordinal-group: 1000;
+}
+.titlebar-placeholder[type="caption-buttons"]:-moz-locale-dir(ltr),
+.titlebar-placeholder[type="fullscreen-button"]:-moz-locale-dir(rtl) {
+  -moz-box-ordinal-group: 0;
+}
+
 #titlebar {
   padding-top: 9px;
 }
