--- a/browser/themes/osx/newtab/newTab.css
+++ b/browser/themes/osx/newtab/newTab.css
@@ -10,8 +10,10 @@
 
 
 #newtab-scrollbox:not([page-disabled]) {
-  color: rgb(0,0,0);
-  background-color: hsl(0,0%,95%);
+  background-color: rgb(229,229,229);
+  background-image: url(chrome://browser/skin/newtab/noise.png),
+                    linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.2));
+  background-attachment: fixed;
 }
 
 
@@ -51,17 +53,7 @@
 #newtab-undo-close-button {
   padding: 0;
   border: none;
-  list-style-image: url("chrome://global/skin/icons/close.png");
-  -moz-image-region: rect(0, 16px, 16px, 0);
   -moz-user-focus: normal;
-}
-
-#newtab-undo-close-button:hover {
-  -moz-image-region: rect(0, 32px, 16px, 16px);
-}
-
-#newtab-undo-close-button:hover:active {
-  -moz-image-region: rect(0, 48px, 16px, 32px);
 }
 
 #newtab-undo-close-button > .toolbarbutton-text {
