--- a/toolkit/themes/osx/global/findBar.css
+++ b/toolkit/themes/osx/global/findBar.css
@@ -9,6 +9,7 @@ findbar {
   background: @scopeBarBackground@;
   border-top: @scopeBarSeparatorBorder@;
   min-width: 1px;
+  padding: 4px 2px;
   transition-property: margin-bottom, opacity, visibility;
   transition-duration: 150ms, 150ms, 0s;
   transition-timing-function: ease-in-out, ease-in-out, linear;
@@ -29,16 +30,10 @@ findbar:-moz-lwtheme {
   border-style: none;
 }
 
-.findbar-container {
-  -moz-padding-start: 2px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
 label.findbar-find-fast {
+  margin: 1px 3px 0 !important;
   color: @scopeBarTitleColor@;
-  margin: 0;
-  -moz-margin-start: 12px;
+  font-weight: bold;
   text-shadow: @loweredShadow@;
 }
 
@@ -49,38 +44,12 @@ label.findbar-find-fast:-moz-lwtheme,
 }
 
 .findbar-closebutton {
-  -moz-margin-start: 4px;
-  -moz-padding-start: 0;
-  -moz-padding-end: 8px;
-  list-style-image: url("chrome://global/skin/icons/close.png");
+  padding: 0;
+  margin: 0 4px;
   border: none;
-  -moz-image-region: rect(0, 16px, 16px, 0);
-  
-  -moz-box-ordinal-group: 0;
-}
-
-.findbar-closebutton:hover {
-  -moz-image-region: rect(0, 32px, 16px, 16px);
-}
-
-.findbar-closebutton:hover:active {
-  -moz-image-region: rect(0, 48px, 16px, 32px);
 }
 
 @media (min-resolution: 2dppx) {
-  .findbar-closebutton {
-    list-style-image: url("chrome://global/skin/icons/close@2x.png");
-    -moz-image-region: rect(0, 32px, 32px, 0);
-  }
-
-  .findbar-closebutton:hover {
-    -moz-image-region: rect(0, 64px, 32px, 32px);
-  }
-
-  .findbar-closebutton:hover:active {
-    -moz-image-region: rect(0, 96px, 32px, 64px);
-  }
-
   .findbar-closebutton > .toolbarbutton-icon {
     width: 16px;
   }
@@ -88,28 +57,24 @@ label.findbar-find-fast:-moz-lwtheme,
 
 .findbar-find-next,
 .findbar-find-previous,
-.findbar-highlight,
-.findbar-case-sensitive {
+.findbar-highlight {
+  margin: 0 4px;
+  padding: 1px 3px;
   -moz-appearance: none;
   border-radius: 10000px;
   border: @roundButtonBorder@;
   background: @roundButtonBackground@;
   box-shadow: @roundButtonShadow@;
   color: buttontext;
-  margin: 0;
 }
 
-.findbar-highlight,
-.findbar-case-sensitive {
-  -moz-margin-end: 5px;
-  padding: 0 3px;
-}
-
-.findbar-container > toolbarbutton:-moz-focusring,
-.findbar-find-next:-moz-focusring,
-.findbar-find-previous:-moz-focusring {
+.findbar-container > toolbarbutton:-moz-focusring {
   position: relative;
   box-shadow: @focusRingShadow@, @roundButtonShadow@;
+}
+
+.findbar-container > toolbarbutton > .toolbarbutton-text {
+  margin: 0 6px !important;
 }
 
 .findbar-container > toolbarbutton[disabled] {
@@ -118,42 +83,98 @@ label.findbar-find-fast:-moz-lwtheme,
 
 .findbar-find-next:not([disabled]):hover:active,
 .findbar-find-previous:not([disabled]):hover:active,
-.findbar-highlight:not([disabled]):hover:active,
-.findbar-case-sensitive:not([disabled]):hover:active,
-.findbar-highlight:not([disabled])[checked="true"],
-.findbar-case-sensitive:not([disabled])[checked="true"] {
+.findbar-highlight:not([disabled]):hover:active {
   text-shadow: @loweredShadow@;
   background: @roundButtonPressedBackground@;
   box-shadow: @roundButtonPressedShadow@;
 }
 
-.findbar-find-next:hover:active:-moz-focusring,
-.findbar-find-previous:hover:active:-moz-focusring {
+.findbar-container > toolbarbutton:hover:active:-moz-focusring {
   text-shadow: @loweredShadow@;
   background: @roundButtonPressedBackground@;
   box-shadow: @focusRingShadow@, @roundButtonPressedShadow@;
 }
 
 .findbar-closebutton > .toolbarbutton-text {
+  display: none;  
+}
+
+
+
+.findbar-container > checkbox {
+  list-style-image: url("chrome://global/skin/icons/checkbox.png");
+  -moz-image-region: rect(0px 16px 16px 0px);
+  -moz-appearance: none;
+  margin: 0 2px;
+  -moz-margin-start: 7px;
+}
+
+.findbar-container > checkbox:hover:active {
+  -moz-image-region: rect(0px 32px 16px 16px);
+}
+.findbar-container > checkbox[checked] {
+  -moz-image-region: rect(0px 48px 16px 32px);
+}
+.findbar-container > checkbox[checked]:hover:active {
+  -moz-image-region: rect(0px 64px 16px 48px);
+}
+
+@media (min-resolution: 2dppx) {
+  .findbar-container > checkbox {
+    list-style-image: url("chrome://global/skin/icons/checkbox@2x.png");
+    -moz-image-region: rect(0px 32px 32px 0px);
+  }
+
+  .findbar-container > checkbox:hover:active {
+    -moz-image-region: rect(0px 64px 32px 32px);
+  }
+  .findbar-container > checkbox[checked] {
+    -moz-image-region: rect(0px 96px 32px 64px);
+  }
+  .findbar-container > checkbox[checked]:hover:active {
+    -moz-image-region: rect(0px 128px 32px 96px);
+  }
+}
+
+
+
+.findbar-container > checkbox > .checkbox-check {
   display: none;
+}
+
+.findbar-container > checkbox > .checkbox-label-box > .checkbox-label {
+  margin: 0 !important;
+  padding: 2px 0 0;
+}
+
+.findbar-container > checkbox > .checkbox-label-box > .checkbox-icon {
+  -moz-padding-start: 1px;
+  padding-bottom: 1px;
+}
+@media (min-resolution: 2dppx) {
+  .findbar-container > checkbox > .checkbox-label-box > .checkbox-icon {
+    width: 17px;
+    height: 17px;
+  }
+}
+
+.findbar-container > checkbox:-moz-focusring > .checkbox-label-box > .checkbox-icon {
+  border-radius: 4px;
+  box-shadow: @focusRingShadow@;
 }
 
 
 
 .findbar-textbox {
-  position: relative;
   -moz-appearance: none;
-  border: @roundButtonBorder@;
-  border-radius: 10000px 0 0 10000px;
-  box-shadow: @roundButtonShadow@;
+  border-radius: 10000px;
+  border: none;
+  box-shadow: 0 1px 1.5px rgba(0, 0, 0, .7) inset,
+              0 0 0 1px rgba(0, 0, 0, .17) inset;
   background: url("chrome://global/skin/icons/search-textbox.png") -moz-Field no-repeat 5px center;
-  margin: 0;
-  padding: 2px 8px;
+  margin: 0 4px -1px;
+  padding: 3px 8px 2px;
   -moz-padding-start: 19px;
-}
-
-.findbar-textbox:-moz-locale-dir(rtl) {
-  border-radius: 0 10000px 10000px 0;
 }
 
 .findbar-textbox:not([focused="true"]):-moz-lwtheme {
@@ -161,7 +182,8 @@ label.findbar-find-fast:-moz-lwtheme,
 }
 
 .findbar-textbox[focused="true"] {
-  box-shadow: @focusRingShadow@;
+  box-shadow: @focusRingShadow@,
+              0 1px 1.5px rgba(0, 0, 0, .8) inset;
 }
 
 .findbar-textbox[flash="true"] {
@@ -173,56 +195,52 @@ label.findbar-find-fast:-moz-lwtheme,
   color: #FFF;
 }
 
-.findbar-textbox.minimal {
-  border-radius: 10000px;
-  -moz-margin-start: 5px;
-}
 
 
-
-.findbar-find-previous,
 .findbar-find-next {
-  -moz-margin-start: 0;
-  list-style-image: url(chrome://global/skin/icons/find-arrows.png);
-  padding: 2px 6px;
+  -moz-border-end: none;
+  -moz-margin-end: 0 !important;
 }
 
-.findbar-find-previous > .toolbarbutton-text,
-.findbar-find-next > .toolbarbutton-text {
-  margin: 0 !important;
-  padding: 0;
-  width: 0;
+.findbar-find-next:-moz-locale-dir(ltr),
+.findbar-find-previous:-moz-locale-dir(rtl) {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-.findbar-find-previous > .toolbarbutton-icon,
-.findbar-find-next > .toolbarbutton-icon {
-  margin: 0;
-}
+
 
 .findbar-find-previous {
-  border-left: none;
-  border-right: none;
-  -moz-margin-end: 0;
-  -moz-image-region: rect(0, 10px, 9px, 0);
-  border-radius: 0;
+  -moz-margin-start: 0 !important;
 }
 
-.findbar-find-next {
-  -moz-image-region: rect(0, 20px, 9px, 10px);
-  -moz-padding-end: 7px;
-}
-
-.findbar-find-next:-moz-locale-dir(ltr) {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
+.findbar-find-previous:-moz-locale-dir(ltr),
 .findbar-find-next:-moz-locale-dir(rtl) {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 
+
+.findbar-highlight {
+  -moz-margin-start: 8px;
+}
+
+.findbar-highlight > .toolbarbutton-icon {
+  width: 13px;
+  height: 8px;
+  margin: 0 4px;
+  -moz-margin-end: 0;
+  border: 1px solid #818181;
+  border-radius: 4px;
+  background-color: #F4F4F3;
+}
+
+
+.findbar-highlight[checked="true"] > .toolbarbutton-icon {
+  background-color: #FFFF00;
+  border-color: #818100;
+}
 
 .find-status-icon {
   display: none;
@@ -234,14 +252,9 @@ label.findbar-find-fast:-moz-lwtheme,
 }
 
 .findbar-find-status {
-  color: rgba(0,0,0,.5);
-  margin: 0 !important;
+  color: #436599;
+  font-weight: bold;
+  text-shadow: 0 1px rgba(255, 255, 255, .4);
+  margin: 1px 1px 0 !important;
   -moz-margin-start: 12px !important;
-  text-shadow: 0 1px rgba(255,255,255,.4);
-}
-
-
-
-.findbar-highlight {
-  -moz-margin-start: 8px;
 }
