Bug 872636 - Leave space in the tabstrip for the private browsing indicator on OS X. r=Gijs,dao
UltraBlame original commit: 5c9ac2fcd9b27b37b60f82d15c081571ff13c82c

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -3823,12 +3823,10 @@ panel[type="arrow"][popupid="click-to-play-plugins"] > .panel-arrowcontainer > .
 }
 
 #main-window[privatebrowsingmode=temporary] {
-  background-position: top right 40px;
+  background-position: top right 20px;
 }
 
-#main-window[privatebrowsingmode=temporary][inFullscreen] {
-  background-position: top right 10px;
-}
+
 
 #main-window[privatebrowsingmode=temporary]:-moz-locale-dir(rtl) {
   background-position: top left 70px;
@@ -3838,22 +3836,29 @@ panel[type="arrow"][popupid="click-to-play-plugins"] > .panel-arrowcontainer > .
   background-position: top left 10px;
 }
 
+#main-window[privatebrowsingmode=temporary][inFullscreen] .titlebar-placeholder[type="fullscreen-button"]:-moz-locale-dir(ltr) {
+  
+
+  display: -moz-box;
+}
+
 #main-window[privatebrowsingmode=temporary]:-moz-window-inactive {
   background-color: -moz-mac-chrome-inactive;
 }
 
+#main-window[privatebrowsingmode=temporary] #TabsToolbar {
+  -moz-padding-end: 46px;
+}
+
 @media (-moz-mac-lion-theme) {
-  #main-window[privatebrowsingmode=temporary][inFullscreen] #TabsToolbar {
-    -moz-padding-end: 50px;
+  #main-window[privatebrowsingmode=temporary] #TabsToolbar:-moz-locale-dir(ltr) {
+    -moz-padding-end: 36px;
   }
 }
 
 @media not all and (-moz-mac-lion-theme) {
+  
   #main-window[privatebrowsingmode=temporary] {
     background-position: top right 10px;
-  }
-
-  #main-window[privatebrowsingmode=temporary][inFullscreen] #window-controls {
-    -moz-padding-end: 50px;
   }
 }
