Fix downloads merge, no bug, rs=merge
UltraBlame original commit: e6027b2178013e2623493cfbe6b48a558d28285d

--- a/browser/themes/osx/downloads/indicator.css
+++ b/browser/themes/osx/downloads/indicator.css
@@ -7,29 +7,22 @@
 #downloads-indicator-anchor {
   min-width: 20px;
   min-height: 20px;
-}
-
-#downloads-animation-container {
-  min-height: 1px;
-  min-width: 1px;
-  height: 1px;
-  margin-bottom: -1px;
   
 
 
   position: relative;
   
-  z-index: 5;
+  z-index: 1;
 }
 
 
 
 #downloads-indicator-icon {
   background: -moz-image-rect(url("chrome://browser/skin/Toolbar.png"),
-                              0, 140, 20, 120) center no-repeat;
+                              0, 198, 18, 180) center no-repeat;
 }
 
-#downloads-button[attention]
+#downloads-indicator[attention]
 #downloads-indicator-icon {
   background-image: url("chrome://browser/skin/downloads/download-glow.png");
 }
@@ -37,35 +30,35 @@
 
 
 
-#downloads-button:not([counter])
+#downloads-indicator:not([counter])
 #downloads-indicator-counter {
   background: -moz-image-rect(url("chrome://browser/skin/Toolbar.png"),
-                              0, 140, 20, 120) center no-repeat;
+                              0, 198, 18, 180) center no-repeat;
   background-size: 12px;
 }
 
-#downloads-button:not([counter])[attention]
+#downloads-indicator:not([counter])[attention]
 #downloads-indicator-counter {
   background-image: url("chrome://browser/skin/downloads/download-glow.png");
 }
 
 @media (min-resolution: 2dppx) {
   #downloads-indicator-icon:not(:-moz-lwtheme-brighttext) {
-    background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar@2x.png"), 0, 280, 40, 240);
-    background-size: 20px;
+    background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar@2x.png"), 0, 396, 36, 360);
+    background-size: 18px;
   }
 
-  #downloads-button:not([counter]) > #downloads-indicator-anchor >
+  #downloads-indicator:not([counter]) > #downloads-indicator-anchor >
   #downloads-indicator-progress-area > #downloads-indicator-counter {
-    background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar@2x.png"), 0, 280, 40, 240);
+    background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar@2x.png"), 0, 396, 36, 360);
   }
 
-  #downloads-button[attention] > #downloads-indicator-anchor >
+  #downloads-indicator[attention] > #downloads-indicator-anchor >
   #downloads-indicator-icon {
     background-image: url("chrome://browser/skin/downloads/download-glow@2x.png");
   }
 
-  #downloads-button:not([counter])[attention] > #downloads-indicator-anchor >
+  #downloads-indicator:not([counter])[attention] > #downloads-indicator-anchor >
   #downloads-indicator-progress-area > #downloads-indicator-counter {
     background-image: url("chrome://browser/skin/downloads/download-glow@2x.png");
   }
@@ -78,8 +71,6 @@
   background-size: 16px;
   background-position: center;
   background-repeat: no-repeat;
-  width: 16px;
-  height: 16px;
 }
 
 @keyframes downloadsIndicatorNotificationStartRight {
@@ -94,19 +85,19 @@
   to   { opacity: 0; transform: translate(0) scale(1); }
 }
 
-#downloads-notification-anchor[notification="start"] > #downloads-indicator-notification {
+#downloads-indicator[notification="start"] > #downloads-indicator-anchor > #downloads-indicator-notification {
   background-image: url("chrome://browser/skin/downloads/download-notification-start.png");
   animation-name: downloadsIndicatorNotificationStartRight;
   animation-duration: 1s;
 }
 
 @media (min-resolution: 2dppx) {
-  #downloads-notification-anchor[notification="start"] > #downloads-indicator-notification {
+  #downloads-indicator[notification="start"] > #downloads-indicator-anchor > #downloads-indicator-notification {
     background-image: url("chrome://browser/skin/downloads/download-notification-start@2x.png");
   }
 }
 
-#downloads-notification-anchor[notification="start"]:-moz-locale-dir(rtl) > #downloads-indicator-notification {
+#downloads-indicator[notification="start"]:-moz-locale-dir(rtl) > #downloads-indicator-anchor > #downloads-indicator-notification {
   animation-name: downloadsIndicatorNotificationStartLeft;
 }
 
@@ -116,14 +107,14 @@
   to   { opacity: 0; transform: scale(8); }
 }
 
-#downloads-notification-anchor[notification="finish"] > #downloads-indicator-notification {
+#downloads-indicator[notification="finish"] > #downloads-indicator-anchor > #downloads-indicator-notification {
   background-image: url("chrome://browser/skin/downloads/download-notification-finish.png");
   animation-name: downloadsIndicatorNotificationFinish;
   animation-duration: 1s;
 }
 
 @media (min-resolution: 2dppx) {
-  #downloads-notification-anchor[notification="finish"] > #downloads-indicator-notification {
+  #downloads-indicator[notification="finish"] > #downloads-indicator-anchor > #downloads-indicator-notification {
     background-image: url("chrome://browser/skin/downloads/download-notification-finish@2x.png");
   }
 }
@@ -175,15 +166,15 @@
   border-radius: 0 2px 2px 0;
 }
 
-#downloads-button[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-bar {
+#downloads-indicator[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-bar {
   background-color: rgb(220, 230, 81);
 }
 
-#downloads-button[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-remainder {
+#downloads-indicator[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-remainder {
   background-image: linear-gradient(#4b5000, #515700);
 }
 
-toolbar[mode="full"] > #downloads-button[indicator] > .toolbarbutton-text {
+toolbar[mode="full"] > #downloads-indicator > .toolbarbutton-text {
   margin: 2px 0 0;
   padding: 0;
   text-align: center;
