Bug 888775 - Windows 7 with LWT shifts down the tabs because of the add-on bar binding, r=jaws
UltraBlame original commit: 070ae719d24245b2ed306734e7d242c3f16954f8

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -177,7 +177,7 @@
   
   #toolbar-menubar:not([autohide="true"]),
   #TabsToolbar,
-  #navigator-toolbox > toolbar:not(#toolbar-menubar):-moz-lwtheme {
+  #navigator-toolbox > toolbar:not(#toolbar-menubar):not(#addon-bar):-moz-lwtheme {
     -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
   }
 
