Bug 879678 - Remove selectors dealing with a collapsed navigation toolbar. r=dao
UltraBlame original commit: c208735c240c2216e0c015a8e2b1e57155eca676

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -156,9 +156,7 @@
 
   
 
-  #main-window[sizemode=normal] #nav-bar,
-  #main-window[sizemode=normal] #nav-bar[collapsed=true] + toolbar,
-  #main-window[sizemode=normal] #nav-bar[collapsed=true] + #customToolbars + #PersonalToolbar {
+  #main-window[sizemode=normal] #nav-bar {
     border-top: 1px solid @toolbarShadowColor@;
     border-top-left-radius: 2.5px;
     border-top-right-radius: 2.5px;
