Bug 891575 - menupanel.inc and toolbarbuttons.inc should be renamed to menupanel.inc.css and toolbarbuttons.inc.css, respectively. r=Gijs
UltraBlame original commit: dcbfa811f70618983d6741975a2062c368599df2

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -735,7 +735,7 @@ toolbar > .customization-target > toolbarpaletteitem > #history-panelmenu {
 
 
 
-%include ../shared/menupanel.inc
+%include ../shared/menupanel.inc.css
 
 
 #window-controls {
