Bug 877684 - Implement new Customize and Help button styling, r=jaws
UltraBlame original commit: a39e19167f5e7ec496cb3720229a65a54f863af9

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -982,7 +982,7 @@ toolbarbutton.bookmark-item > menupopup {
   }
 
   
-
+  #PanelUI-customize-btn,
   #edit-controls[customizableui-areatype="menu-panel"] > toolbarbutton,
   #zoom-controls[customizableui-areatype="menu-panel"] > toolbarbutton,
   toolbarpaletteitem[place="palette"] > #edit-controls > toolbarbutton,
@@ -1013,6 +1013,19 @@ toolbarbutton.bookmark-item > menupopup {
   #zoom-controls[customizableui-areatype="menu-panel"] > #zoom-in-button,
   toolbarpaletteitem[place="palette"] > #zoom-controls > #zoom-in-button {
     -moz-image-region: rect(0px, 192px, 32px, 160px);
+  }
+
+  #PanelUI-customize-btn {
+    -moz-image-region: rect(0, 32px, 32px, 0);
+  }
+
+  #PanelUI-help-btn {
+    list-style-image: url(chrome://global/skin/icons/question-32.png);
+  }
+
+  #PanelUI-customize-btn > .toolbarbutton-icon,
+  #PanelUI-help-btn > .toolbarbutton-icon {
+    width: 16px;
   }
 }
 
