Bug 873517: Update CSS selectors for Downloads indicator on Linux to show icon. r=mak
UltraBlame original commit: 5e4b7860231358bf5aaa475aec629888fe74bbb6

--- a/browser/themes/linux/downloads/indicator.css
+++ b/browser/themes/linux/downloads/indicator.css
@@ -4,59 +4,39 @@
 
 
 
-#downloads-animation-container {
-  min-height: 1px;
-  min-width: 1px;
-  height: 1px;
-  margin-bottom: -1px;
+#downloads-indicator-anchor {
   
 
 
   position: relative;
-  
-  z-index: 5;
 }
 
-toolbar[iconsize="small"] > #downloads-button > #downloads-indicator-anchor {
-  min-width: 16px;
-  min-height: 16px;
-}
-
-toolbar[iconsize="large"] > #downloads-button > #downloads-indicator-anchor {
+#downloads-indicator[customizableui-areatype="toolbar"] > #downloads-indicator-anchor {
   min-width: 24px;
   min-height: 24px;
 }
 
 
 
-toolbar[iconsize="small"] > #downloads-button > #downloads-indicator-anchor > #downloads-indicator-icon {
-  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-small.png"),
-                              0, 16, 16, 0) center no-repeat;
-}
-
-toolbar[iconsize="large"] > #downloads-button > #downloads-indicator-anchor > #downloads-indicator-icon {
+#downloads-indicator[customizableui-areatype="toolbar"] > #downloads-indicator-anchor > #downloads-indicator-icon {
   background: -moz-image-rect(url("chrome://browser/skin/Toolbar.png"),
                               0, 24, 24, 0) center no-repeat;
 }
 
-toolbar[iconsize="small"] > #downloads-button[attention] > #downloads-indicator-anchor > #downloads-indicator-icon {
-  background-image: url("chrome://browser/skin/downloads/download-glow-small.png");
-}
-
-toolbar[iconsize="large"] > #downloads-button[attention] > #downloads-indicator-anchor > #downloads-indicator-icon {
+#downloads-indicator[customizableui-areatype="toolbar"][attention] > #downloads-indicator-anchor > #downloads-indicator-icon {
   background-image: url("chrome://browser/skin/downloads/download-glow.png");
 }
 
 
 
 
-#downloads-button:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter {
+#downloads-indicator:not([counter]) > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter {
   background: -moz-image-rect(url("chrome://browser/skin/Toolbar-small.png"),
                               0, 16, 16, 0) center no-repeat;
   background-size: 12px;
 }
 
-#downloads-button:not([counter])[attention] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter {
+#downloads-indicator:not([counter])[attention] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter {
   background-image: url("chrome://browser/skin/downloads/download-glow.png");
 }
 
@@ -67,8 +47,6 @@ toolbar[iconsize="large"] > #downloads-button[attention] > #downloads-indicator-
   background-size: 16px;
   background-position: center;
   background-repeat: no-repeat;
-  width: 16px;
-  height: 16px;
 }
 
 @keyframes downloadsIndicatorNotificationStartRight {
@@ -83,13 +61,13 @@ toolbar[iconsize="large"] > #downloads-button[attention] > #downloads-indicator-
   to   { opacity: 0; transform: translate(0) scale(1); }
 }
 
-#downloads-notification-anchor[notification="start"] > #downloads-indicator-notification {
+#downloads-indicator[notification="start"] > #downloads-indicator-anchor > #downloads-indicator-notification {
   background-image: url("chrome://browser/skin/downloads/download-notification-start.png");
   animation-name: downloadsIndicatorNotificationStartRight;
   animation-duration: 1s;
 }
 
-#downloads-notification-anchor[notification="start"]:-moz-locale-dir(rtl) > #downloads-indicator-notification {
+#downloads-indicator[notification="start"]:-moz-locale-dir(rtl) > #downloads-indicator-anchor > #downloads-indicator-notification {
   animation-name: downloadsIndicatorNotificationStartLeft;
 }
 
@@ -99,7 +77,7 @@ toolbar[iconsize="large"] > #downloads-button[attention] > #downloads-indicator-
   to   { opacity: 0; transform: scale(8); }
 }
 
-#downloads-notification-anchor[notification="finish"] > #downloads-indicator-notification {
+#downloads-indicator[notification="finish"] > #downloads-indicator-anchor > #downloads-indicator-notification {
   background-image: url("chrome://browser/skin/downloads/download-notification-finish.png");
   animation-name: downloadsIndicatorNotificationFinish;
   animation-duration: 1s;
@@ -152,15 +130,15 @@ toolbar[iconsize="large"] > #downloads-button[attention] > #downloads-indicator-
   border-radius: 0 2px 2px 0;
 }
 
-#downloads-button[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-bar {
+#downloads-indicator[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-bar {
   background-color: rgb(220, 230, 81);
 }
 
-#downloads-button[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-remainder {
+#downloads-indicator[paused] > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-progress > .progress-remainder {
   background-image: linear-gradient(#4b5000, #515700);
 }
 
-toolbar[mode="full"] > #downloads-button > .toolbarbutton-text {
+toolbar[mode="full"] > #downloads-indicator > .toolbarbutton-text {
   margin: 0;
   text-align: center;
 }
