--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -173,24 +173,27 @@
 
 .tab-background-start[selected=true]::before,
 .tab-background-end[selected=true]::before {
-  background-color: -moz-dialog;
+  background-color: @fgTabBackgroundColor@;
   background-image: @fgTabTexture@;
   background-repeat: no-repeat;
 }
 
 .tab-background-middle[selected=true] {
-  background-color: transparent;
+  background-clip: padding-box, padding-box, content-box;
+  background-color: @fgTabBackgroundColor@;
   background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
                     @fgTabTexture@,
-                    @fgTabBackgroundMiddle@;
+                    none;
   background-repeat: repeat-x;
   background-size: auto 100%;
+  
+
+  padding-top: 2px;
 }
 
 
 .tab-background-middle[selected=true]:-moz-lwtheme {
-  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
-                    @fgTabTextureLWT@;
+  background-color: transparent;
   
   background-size: auto 100%, auto 100%, auto auto;
 }
