Bug 924182 - Don't draw superfluous bottom border on TabsToolbar on OS X unless we're using a lw-theme or not drawing tabs in the titlebar. r=Gijs.
UltraBlame original commit: 646cc8771af8b97f9dd07f607d8faf82b7558c20

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2539,7 +2539,8 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 
 
-#TabsToolbar::after {
+#main-window:not([tabsintitlebar]) #TabsToolbar::after,
+#TabsToolbar:-moz-lwtheme::after {
   content: '';
   
 
