Bug 924181 - Don't draw a superfluous gradient on navigator-toolbox if tabs are in the titlebar on OS X. r=Gijs.
UltraBlame original commit: 086d470fb5f47df4ca678999d97bc8736ab87116

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2517,7 +2517,7 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
   box-shadow: @focusRingShadow@;
 }
 
-#main-window:not([privatebrowsingmode=temporary]):not([customizing]):not([customize-exiting]) #navigator-toolbox:not(:-moz-lwtheme)::before {
+#main-window:not(:-moz-any([privatebrowsingmode=temporary],[customizing],[customize-exiting],[tabsintitlebar])) #navigator-toolbox:not(:-moz-lwtheme)::before {
   
 
 
