--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -391,8 +391,14 @@ toolbarbutton.bookmark-item > menupopup {
   margin: 0 4px;
 }
 
+
+
+
+
+
+
 #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker::before,
-#nav-bar toolbaritem > .toolbarbutton-1 + .toolbarbutton-1::before {
+#nav-bar toolbaritem:not(#urlbar-container) > .toolbarbutton-1 + .toolbarbutton-1::before {
   content: "";
   display: -moz-box;
   position: absolute;
