Bug 924388 - There should be small separators between the sub-edit controls and sub-zoom controls when each controls is placed in a toolbar. r=gijs
UltraBlame original commit: 859ff4a1af9816a71c156ccf092f7d063f3e0db0

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -395,10 +395,8 @@ toolbarbutton.bookmark-item > menupopup {
 
 
 
-
-
 #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker::before,
-#nav-bar toolbaritem:not(#urlbar-container) > .toolbarbutton-1 + .toolbarbutton-1::before {
+#nav-bar .toolbaritem-combined-buttons > .toolbarbutton-1 + .toolbarbutton-1::before {
   content: "";
   display: -moz-box;
   position: absolute;
