--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -91,6 +91,14 @@ toolbarseparator {
               linear-gradient(hsl(0,0%,93%), hsl(0,0%,83%));
   background-clip: border-box;
   background-origin: border-box !important;
+
+  
+
+
+
+  background-repeat: repeat-x, no-repeat;
+  background-position: 0 1px, 0 0;
+
   box-shadow: inset 0 1px 0 hsla(0,0%,100%,.4);
   margin-top: -1px;
   
