Bug 925415 - Remove dead tab opacity transition CSS from themes/osx/browser.css. r=Gijs
UltraBlame original commit: fefb4e96a8927e58a3e475edb17ee59543e1acb8

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2508,8 +2508,7 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 .tabbrowser-tab:not([pinned]):not([fadein]) {
   transition: min-width 200ms ease-out ,
-              max-width 230ms ease-out ,
-              opacity 50ms ease-out 80ms ;
+              max-width 230ms ease-out ;
 }
 
 .tabbrowser-tab,
