Bug 926286 - draw the tabstoolbar border ourselves in fullscreen, r=MattN
UltraBlame original commit: b37c23af0b3bd1d345e70ae8ac366b969165f359

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2555,6 +2555,7 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 
 
+#main-window[sizemode="fullscreen"] #TabsToolbar::after,
 #main-window:not([tabsintitlebar]) #TabsToolbar::after,
 #TabsToolbar:-moz-lwtheme::after {
   content: '';
