--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -124,6 +124,13 @@ toolbarpaletteitem[mousedown] > toolbarbutton > .toolbarbutton-icon {
 }
 
 
+toolbarpaletteitem[place="toolbar"] {
+  border-left-width: 0;
+  border-right-width: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
 toolbarpaletteitem[dragover] {
   border-left-color: transparent;
   border-right-color: transparent;
